--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ futures-channel-preview = "0.3.0-alpha.18"
 console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 js-sys = "0.3.55"
-web-sys = { version = "0.3.4", features = [ "console", "Headers", "Request", "RequestInit", "RequestCredentials", "RequestMode", "Response", "Window" ]}
+web-sys = { version = "0.3.4", features = [ "console", "Headers", "Request", "RequestInit", "RequestCredentials", "RequestMode", "Response", "Window", "HtmlDocument" ]}
 uuid = { version = "0.8.2", features = [ "v4", "wasm-bindgen" ]}
 bincode = "1.3.3"
 serde = "1.0.136"
